# shop

./: .env  .env.example  .env.mysql-fix.bak  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  MEMORY.md  README.md  SECRETS.md  TODO.md  app.py  db.sqlite3.mysql-fix.bak  pyproject.toml  run.py  scripts-start-all.sh  scripts-start-web.sh  scripts-stop-shop.sh  tests_fixed_components.py
accounts/: admin.py  apps.py  models.py  services.py
biz/: __init__.py  apps.py  models.py  tests.py
bot/: admin.py  api.py  api_admin_users.py  api_auth.py  api_cloud_accounts.py  api_operation_logs.py  api_products.py  api_site_configs.py  api_telegram.py  api_users.py  cloud_texts.py  config.py  exchange.py  fsm.py  handlers.py  keyboards.py  models.py  runner.py  services.py  telegram_listener.py  telegram_sender.py  tests.py  tron_queries.py  user_stats.py  utils.py
cloud/: aliyun_simple.py  api.py  api_asset_edit.py  api_asset_snapshots.py  api_assets.py  api_monitors.py  api_orders.py  api_plans.py  api_servers.py  api_sync.py  api_tasks.py  asset_dedupe.py  asset_expiry.py  asset_queries.py  aws_lightsail.py  bootstrap.py  cache.py  dashboard_api_helpers.py  dashboard_order_helpers.py  dashboard_snapshots.py  ip_guard.py  lifecycle.py  lifecycle_execution.py  lifecycle_plan_queries.py  lifecycle_schedule.py  lifecycle_state.py  lifecycle_tasks.py  models.py  note_utils.py  ports.py  provisioning.py  resource_monitor.py  schemas.py  server_records.py  services.py  sync_jobs.py  sync_safety.py  task_center.py  tests.py  tests_load_test_db.py  (+1 more)
core/: admin.py  (+15 more)
(+348 files in other folders)
